changelog
    version 2.1.6
        - Allows targets subset with runWF 

    version 2.1.5
        - runWF remote option added
        
    version 2.1.4
        - runInfo Replacement method update
        
    version 2.1.3
        - yamlinput methods update
        
    version 2.1.2
        - preprocessReads updates
        
    version 2.1.1
        - runCommandline function: 
            - Fixed status/file.exists dataframe;
            - input_targets improved.
        - runWF function: run_step, ignore.dep and targets arguments added.
        
    version 1.99.32
        - Updated importWF, sal2bash and sal2rmd functions
        - Updated plotWF function

    version 1.99.31
        - Updated renderReport function

    version 1.99.30
        - allowing multiple steps dependency == NA
        - Fixed replaceStep

    version 1.99.29
        - cwlFilesUpdate function 

    version 1.99.28
        - Update package version

    version 1.27.27
        - After SPRproject(resume=TRUE), spr_importing option

    version 1.27.26
        - accepting 'input.results.path' to cwl description file

    version 1.27.24/1.27.25
        - Dependencies and global variables fixed

    version 1.27.23
        - Added new method: updateStatus<-
        - Added new slot to LineWise Class - runInfo
        - Added new arguments to LineWise function: 
            - run_step
            - run_session
        - Updated write_SYSargsList and read_SYSargsList
        - Removed LineWise slot: rmdPath. Info can be found on the files slot or still using the method 
        - Added random numbers to log files names + collect each R code steps logs

    version 1.27.22
        - slot runInfo updated
        - Updates Documentation
        - Minor fixes

    version 1.27.20/21
        - Updates Documentation
        - Minor fixes
        
    version 1.27.18/19
        - Updates Documentation
        - Minor fixes: infile1/infile2, alignStats
        - exporting write_SYSargsList
    